[gd_scene load_steps=11 format=3 uid="uid://cy2by24f60obe"]

[ext_resource type="Script" uid="uid://bet82i0xmwnax" path="res://scripts/start_menu.gd" id="1_thu50"]
[ext_resource type="FontFile" uid="uid://buho8mxtdbp3r" path="res://fonts/Gaegu-Bold.ttf" id="2_m7x51"]
[ext_resource type="Texture2D" uid="uid://bsbavu8ferbav" path="res://sprites/Pause Menu/Settings BG.png" id="3_u4qax"]
[ext_resource type="FontFile" uid="uid://u1frrkgccc5x" path="res://fonts/Atkinson_Hyperlegible_Next/static/AtkinsonHyperlegibleNext-Regular.ttf" id="5_e58y3"]
[ext_resource type="Texture2D" uid="uid://dvr7jdwhqyui" path="res://sprites/Pause Menu/Slider Button Idle.png" id="6_apowk"]
[ext_resource type="Texture2D" uid="uid://bt4qfq2jn7aks" path="res://sprites/Pause Menu/Slider Button Hover.png" id="7_vnuwp"]
[ext_resource type="AudioStream" uid="uid://dy6d0swpyaewe" path="res://audio/select_sfx.wav" id="8_5byqq"]
[ext_resource type="Script" uid="uid://dlojhoj0vn1gb" path="res://scripts/audio_slider.gd" id="8_egh8s"]
[ext_resource type="AudioStream" uid="uid://dq2qg8fc4ewe0" path="res://audio/titletrack_ver2.wav" id="9_5byqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1kog"]
content_margin_top = 14.0
bg_color = Color(0.27014354, 0.6707075, 0.6759358, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.9515795, 0.95157963, 0.9515795, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 10

[node name="StartMenu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_thu50")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 217.0
offset_right = 1250.0
offset_bottom = 308.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 90
text = "Tunnel of Love"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 887.0
offset_top = 450.0
offset_right = 1064.0
offset_bottom = 508.0
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 548.0
offset_right = 1068.0
offset_bottom = 606.0
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 40
text = "Settings
"

[node name="Options" type="TextureRect" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(520, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.5
offset_top = -465.0
offset_right = 347.5
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u4qax")

[node name="MusicVolume" type="Label" parent="Options"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 0
offset_left = 188.0
offset_top = 425.0
offset_right = 478.0
offset_bottom = 461.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 35
text = "music volume"

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Resume" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 35
text = "Done"
flat = true

[node name="Restart" type="Button" parent="Options/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 35
text = "Restart"
flat = true

[node name="Quit" type="Button" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 35
text = "Quit"
flat = true

[node name="DefaultFont" type="Button" parent="Options/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("2_m7x51")
theme_override_font_sizes/font_size = 35
text = "Default"
flat = true

[node name="AltFont" type="Button" parent="Options/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_colors/font_hover_color = Color(0.9098039, 0.5882353, 0.61960787, 1)
theme_override_fonts/font = ExtResource("5_e58y3")
theme_override_font_sizes/font_size = 30
text = "Atkitson Hyperlegible"
flat = true

[node name="MusicSlider" type="HSlider" parent="Options/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/grabber_offset = -32
theme_override_icons/grabber = ExtResource("6_apowk")
theme_override_icons/grabber_highlight = ExtResource("7_vnuwp")
theme_override_styles/slider = SubResource("StyleBoxFlat_b1kog")
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("8_egh8s")
bus_name = "music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5byqq")
bus = &"music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5byqq")
volume_db = -5.0
autoplay = true
bus = &"music"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
